--- a/Day-1/BookMark.html
+++ b/Day-1/BookMark.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>Bookmark using HTML</h1>
-        <p><a target="-blank" href="https://www.google.com">GOOGLE</a></p>
+
+        <p><a target="-blank" href="https://www.hackerrank.com/profile/pushpendra36009">Hackerrank</a></p>
+        <p><a target="-blank" href="https://www.linkedin.com/in/pushpendra-verma/">Linkedin</a></p>
+        <p><a target="-blank" href="https://www.codechef.com/users/pushpendra05v">Codechef</a></p>
+        <p><a target="-blank" href="https://github.com/Pushpendra3005">Github</a></p>
+        
     </body>
 </html>
