--- a/Bookmark/BookMark.html
+++ b/Bookmark/BookMark.html
@@ -17,7 +17,12 @@
         <p><a target="-blank" href="https://www.codehelp.in/mock-tests">Code-Help(Aptitude)</a></p>
         <p><a target="-blank" href="https://www.roc8.careers/">Hiring</a></p>
         <p><a target="-blank" href="https://www.codewithharry.com/notes/">Harry-Notes</a></p>
+        <p><a target="-blank" href="https://linktr.ee/KushalVijay">Kushal_Vijay</a></p>
+        <p><a target="-blank" href="https://linktr.ee/inder.code">Inder_Code</a></p>
+        <p><a target="-blank" href="https://linktr.ee/hiten.codes">Hiten_Codes</a></p>
         <p><a target="-blank" href="https://namastedev.com/learn/namaste-javascript?utm_source=youtube&utm_medium=video&utm_campaign=yt_placements">Namaste-javadcript</a></p>
         
+        <h2>InterShip</h2>
+        <p><a target="-blank" href="https://www.codsoft.in/">CodeSoft</a></p>
     </body>
 </html>
