--- a/Bookmark/BookMark.html
+++ b/Bookmark/BookMark.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" , initial-scale="1.0">
-        <title>Day-1 Bookmark Manager</title>
+        <title>Bookmark Manager</title>
     </head>
     <body>
         <h1>Bookmark using HTML</h1>
