--- a/MinProject1/minpro1.html
+++ b/MinProject1/minpro1.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <title>Mini Project 1</title>
     <link rel="stylesheet" href="minpro1.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
+
 <div class="wrapper">
     <div class="container">
         <img src="background.png" class="background">
