--- a/grid/grid_area.html
+++ b/grid/grid_area.html
@@ -6,6 +6,17 @@
     <title>Grid Area </title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box1">BOX1</div>
+        <div class="box2">BOX2</div>
+        <div class="box3">BOX3</div>
+        <div class="box4">BOX4</div>
+        <div class="box5">BOX5</div>
+        <div class="box6">BOX6</div>
+        <div class="box7">BOX7</div>
+        <div class="box8">BOX8</div>
+        <div class="box9">BOX9</div>
+        <div class="box10">BOX10</div>
+    </div>
 </body>
 </html>
