--- a/grid_area.html
+++ b/grid_area.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Area </title>
+    <meta charset="UTF-8" />
+    <title>GRID AREA</title>
 </head>
 <body>
     <div class="container">
